@@ -6,6 +6,7 @@
 extern PyObject* ObjCExc_error;
 extern PyObject* ObjCExc_noclass_error;
 extern PyObject* ObjCExc_internal_error;
+extern PyObject* PyObjCExc_NoProtocol;
 
 int ObjCUtil_Init(PyObject* module);
 
